--- a/style/css/style.css
+++ b/style/css/style.css
@@ -1,3 +1,15 @@
+leftbar-compment {
+  width: 200px;
+  left: 0;
+  -webkit-transition: left 0.3s ease;
+  transition: left 0.3s ease;
+}
+
+@media (min-width: 768px) {
+  leftbar-compment {
+    left: -200px;
+  }
+}
 body {
   padding: 0;
   margin: 0;
