--- a/style/css/style.css
+++ b/style/css/style.css
@@ -1,15 +1,3 @@
-leftbar-compment {
-  width: 200px;
-  left: 0;
-  -webkit-transition: left 0.3s ease;
-  transition: left 0.3s ease;
-}
-
-@media (min-width: 768px) {
-  leftbar-compment {
-    left: -200px;
-  }
-}
 body {
   padding: 0;
   margin: 0;
@@ -27,6 +15,19 @@ a {
   text-decoration: none;
 }
 
+.doc-left-box {
+  width: 200px;
+  left: -200px;
+  position: fixed;
+  -webkit-transition: left 0.3s ease;
+  transition: left 0.3s ease;
+}
+
+@media (min-width: 768px) {
+  .doc-left-box {
+    left: 0px;
+  }
+}
 #left-bar {
   margin-top: 60px;
   position: fixed;
