--- a/style/css/style.css
+++ b/style/css/style.css
@@ -18,9 +18,23 @@ a {
 .doc-left-box {
   width: 200px;
   left: -200px;
+  height: 100%;
   position: fixed;
   -webkit-transition: left 0.3s ease;
   transition: left 0.3s ease;
+  position: relative;
+}
+
+.toggle-btn {
+  width: 50px;
+  height: 100vh;
+  background-color: brown;
+}
+
+.main-content {
+  background-color: burlywood;
+  width: 100%;
+  height: 100vh;
 }
 
 @media (min-width: 768px) {
