--- a/style/scss/_index.scss
+++ b/style/scss/_index.scss
@@ -1,10 +1,24 @@
 .doc-left-box {
-
-
   width: 200px;
   left: -200px;
+  height: 100%;
   position: fixed;
-  transition: left 0.3s ease
+  transition: left 0.3s ease;
+  position: relative;
+
+}
+
+
+.toggle-btn {
+  width: 50px;
+  height: 100vh;
+  background-color: brown;
+}
+
+.main-content {
+  background-color: burlywood;
+  width: 100%;
+  height: 100vh;
 }
 
 @include md {
