--- a/style/css/style.css
+++ b/style/css/style.css
@@ -15,6 +15,10 @@ a {
   text-decoration: none;
 }
 
+#header-compment {
+  margin-bottom: 60px;
+}
+
 .doc-left-box {
   width: 200px;
   left: -200px;
@@ -22,24 +26,44 @@ a {
   position: fixed;
   -webkit-transition: left 0.3s ease;
   transition: left 0.3s ease;
-  position: relative;
-}
-
-.toggle-btn {
-  width: 50px;
-  height: 100vh;
-  background-color: brown;
 }
 
 .main-content {
-  background-color: burlywood;
-  width: 100%;
-  height: 100vh;
+  background-color: aqua;
+  height: calc(100vh - 60px);
+  padding: 10px;
+  margin-top: 60px;
+  padding-left: 50px;
+  margin-left: 0px;
+  -webkit-transition: margin-left 0.3s ease;
+  transition: margin-left 0.3s ease;
+  overflow-y: auto;
+  word-wrap: break-word;
+}
+
+.bar-hide {
+  position: fixed;
+  top: 60px;
+  left: 0px;
+  -webkit-transition: left 0.3s ease;
+  transition: left 0.3s ease;
+}
+
+.bar-hide #sidebar-toggle {
+  background-color: rgb(57, 57, 57);
+  color: white;
+  font-size: 25px;
 }
 
 @media (min-width: 768px) {
   .doc-left-box {
     left: 0px;
+  }
+  .main-content {
+    margin-left: 200px;
+  }
+  .bar-hide {
+    left: 200px;
   }
 }
 #left-bar {
@@ -51,6 +75,10 @@ a {
   color: rgb(147, 121, 255);
   width: inherit;
   overflow-y: auto;
+}
+
+#left-bar::-webkit-scrollbar {
+  width: 0;
 }
 
 #nav .header {
