--- a/style/scss/_index.scss
+++ b/style/scss/_index.scss
@@ -1,28 +1,65 @@
+#header-compment {
+  margin-bottom: 60px;
+}
+
 .doc-left-box {
   width: 200px;
   left: -200px;
   height: 100%;
   position: fixed;
   transition: left 0.3s ease;
-  position: relative;
 
-}
-
-
-.toggle-btn {
-  width: 50px;
-  height: 100vh;
-  background-color: brown;
 }
 
 .main-content {
-  background-color: burlywood;
-  width: 100%;
-  height: 100vh;
+  background-color: aqua;
+
+  height: calc(100vh - 60px);
+  // margin-top: 60px;
+  padding: 10px;
+  margin-top: 60px;
+  padding-left: 50px;
+  margin-left: 0px;
+  transition: margin-left 0.3s ease;
+  overflow-y: auto;
+  word-wrap: break-word
 }
+
+.bar-hide {
+  position: fixed;
+  top: 60px;
+  left: 0px;
+  transition: left 0.3s ease;
+}
+
+.bar-hide #sidebar-toggle {
+  background-color: rgb(57, 57, 57);
+  color: white;
+  font-size: 25px;
+}
+
+
+
+// .toggle-btn {
+//   width: 50px;
+//   height: 100vh;
+//   background-color: brown;
+// }
+
 
 @include md {
   .doc-left-box {
     left: 0px;
   }
+
+
+  .main-content {
+    margin-left: 200px;
+  }
+
+  .bar-hide {
+    left: 200px;
+  }
+
+
 }
