--- a/style/scss/_header.scss
+++ b/style/scss/_header.scss
@@ -1,51 +1,44 @@
 #nav {
 
 
+  .no-scroll {
+    overflow: hidden;
+  }
+
   .header {
     background-color: #818181;
     height: 60px;
   }
-
 
   .sidebar {
     top: 60px;
     height: calc(100vh - 60px);
   }
 
-
-  // 狀態
   #sidebar {
     display: none;
   }
 
-  // #sidebar 按鈕
+  li {
 
-  .container {
-    display: inline-block;
-    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    button {
+      margin: 0 20px;
+    }
+
+    a {
+      height: 100%;
+      padding: 0 20px;
+      display: block;
+      background-color: burlywood;
+      align-items: center;
+      line-height: 60px;
+    }
   }
 
-  .bar1,
-  .bar2,
-  .bar3 {
-    width: 35px;
-    height: 5px;
-    background-color: #333;
-    margin: 6px 0;
-    transition: 0.4s;
-  }
-
-  .open-btn.change .bar1 {
-    transform: translate(0, 11px) rotate(-45deg);
-  }
-
-  .open-btn.change .bar2 {
-    opacity: 0;
-  }
-
-  .open-btn.change .bar3 {
-    transform: translate(0, -11px) rotate(45deg);
-  }
 
 
 }
