--- a/style/scss/_LeftBar.scss
+++ b/style/scss/_LeftBar.scss
@@ -18,26 +18,22 @@
   }
 
   .accordion-item {
-    border: 1px solid #ff0000;
+    border: 1px solid #5ee1ff;
     margin-bottom: 10px;
   }
 
   .accordion-header {
-    background-color: #aeaeae;
+    background-color: #919191;
+    color: white;
     padding: 10px;
     cursor: pointer;
   }
 
   .accordion-content {
     overflow: hidden;
-    padding: 0px;
-    // height: 0;
-    transition: height 0.2s ease;
-  }
-
-  .accordion-content.active {
-    height: auto;
-    /* 讓內容高度自適應內容大小 */
+    padding: 00px;
+    height: 0;
+    transition: height 0.3s ease;
   }
 }
 
