--- a/style/css/style.css
+++ b/style/css/style.css
@@ -109,6 +109,19 @@ a {
   height: 0;
   -webkit-transition: height 0.3s ease;
   transition: height 0.3s ease;
+  list-style: armenian;
+}
+#left-bar .accordion-content li {
+  text-align: center;
+  padding: 2px 0;
+}
+#left-bar .accordion-content li:hover {
+  background-color: #d7d7d7;
+  border-radius: 10px;
+}
+#left-bar .accordion-content li a {
+  color: rgb(147, 121, 255);
+  font-size: 20px;
 }
 
 #left-bar::-webkit-scrollbar {
